--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
-<project name="Retrieve and Deploy SFDC metadata" default="deployInformation" basedir=".." xmlns:sf="antlib:com.salesforce">
+<project name="Retrieve and Deploy SFDC metadata" default="deployInformation" basedir="." xmlns:sf="antlib:com.salesforce">
 
     <taskdef uri="antlib:com.salesforce"
              resource="com/salesforce/antlib.xml"
-             classpath="ant-salesforce_${sfdc.apiversion}.jar"/>
+             classpath="ant-salesforce_38.jar"/>
 
     <property file="build.properties"/>
     <property environment="env"/>
